<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_inset"
    tools:context="com.example.payments_test.ui.login.LoginFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/authorization_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="authorization_label,login_layout,password_layout" />

    <TextView
        android:id="@+id/authorization_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorization_label"
        android:textAlignment="center"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toTopOf="@+id/login_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_layout"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_inset"
        android:hint="@string/login_hint"
        android:textColorHint="@color/text_gray"
        app:layout_constraintBottom_toTopOf="@+id/login_error"
        app:layout_constraintTop_toBottomOf="@+id/authorization_label"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/input_field_inset"
            android:paddingEnd="@dimen/input_field_inset" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/input_field_inset"
        android:text="@string/login_error"
        android:textColor="@color/red"
        android:textSize="@dimen/error_text_size"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_layout"
        app:layout_constraintBottom_toTopOf="@id/password_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_inset"
        android:hint="@string/password_hint"
        android:textColorHint="@color/text_gray"
        app:layout_constraintBottom_toTopOf="@+id/password_error"
        app:layout_constraintTop_toBottomOf="@+id/login_error"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/input_field_inset"
            android:paddingEnd="@dimen/input_field_inset" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/input_field_inset"
        android:text="@string/password_error"
        android:textColor="@color/red"
        android:textSize="@dimen/error_text_size"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintBottom_toTopOf="@+id/log_in_button"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/log_in"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>